<resources>
    <string name="app_name">Mobile Meals</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="signup">Sign Up</string>
    <string name="sign_up_message">Don\'t have an account?</string>
    <string name="admin_login">Admin Login</string>
    <string name="view_restaurants">View Restaurants</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_restaurant_name">Add Restaurant Name</string>
    <string name="add_address">Add Address</string>
    <string name="add_city">Add City</string>
    <string name="add_cuisine">Add Cuisine</string>
    <string name="enter_opening_time">Enter Opening Time</string>
    <string name="enter_closing_time">Enter Closing Time</string>
    <string name="submit">Submit</string>
    <string name="dish_name">Enter Dish Name</string>
    <string name="dish_category">Enter Dish Category</string>
    <string name="select_restaurant">Select Restaurant</string>
    <string name="enter_price">Enter Dish Price</string>
    <string name="add_to_order">Add To Order</string>
    <string name="pay_card">Pay Via Card</string>
    <string name="pay_paypal">Pay via paypal</string>
    <string name="place_order">Place Order</string>
    <string name="enter_address">Enter Address</string>
    <string name="order_placed">Order Placed</string>
    <string name="back_to_home">Back to Home</string>
    <string name="enter_city">Enter City</string>
    <string name="update_profile">Update Profile</string>
    <string name="view_meals">View Meals</string>
    <string name="delete_this_restaurant">Delete This Restaurant</string>
    <string name="order_summary">Order Summary</string>
    <string name="rate_restaurant">Rate This Restaurant</string>
    <string name="enter_feedback">Enter Feedback</string>
    <string name="edit_this_restaurant">Edit this Restaurant</string>
</resources>